frontend/styles/tag.module.scss
.tagList {
  min-height: calc(100vh - 70px);
  margin-top: 5px;
  padding-bottom: 5px;
  border-radius: 10px;

  background-color: var(--tag-list-bg);
  overflow: auto;

  @media screen and (max-width: 800px) {
    .title {
      font-size: 12px;
    }

    p {
      font-size: 20px;
    }
  }

  @media screen and (max-width: 780px) {
    min-height: 35vh;
  }

  @media screen and (min-width: 760px) {
    max-height: calc(100vh - 70px);
  }
}

.scroller::-webkit-scrollbar {
  width: 5px;
  color: #6c757d;
}

.scroller::-webkit-scrollbar-track {
  -webkit-box-shadow: inset 0 0 0 #6c757d;
  border-radius: 10px;
}

.scroller::-webkit-scrollbar-thumb {
  border-radius: 19px;
  background: #29b5bf;
}

.listGroup {
  padding-top: 0.75rem; /* 12px */
  width: 100%;
}

